@@ -10,6 +10,7 @@
 
 1.9 preview 10 (2011-02-??)
  ! Docelu.pl
+ + Bookmarks can be added (saves map position and selected map source) 
 
 1.9 preview 9 (2011-02-22)
  + New map source: Reit- und Wanderkarte (Abo) - (requires purchased ticket)
